--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+distkv-inv (0.21.1-2) unstable; urgency=medium
+
+  * Actually install the stuff
+
+ -- Matthias Urlichs <matthias@urlichs.de>  Mon, 15 Mar 2021 14:22:31 +0100
+
 distkv-inv (0.21.1-1) unstable; urgency=medium
 
   * Merge
